// SPDX-License-Identifier: MIT
//
// Copyright (c) 2024 skjdfhkskjds
//
// Permission is hereby granted, free of charge, to any person
// obtaining a copy of this software and associated documentation
// files (the "Software"), to deal in the Software without
// restriction, including without limitation the rights to use,
// copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the
// Software is furnished to do so, subject to the following
// conditions:
//
// The above copyright notice and this permission notice shall be
// included in all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
// OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
// HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
// WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
// FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
// OTHER DEALINGS IN THE SOFTWARE.

syntax = "proto3";

option go_package = "github.com/skjdfhkskjds/proto";

// Request message to set a password.
message SetPasswordRequest {
    string username = 1;
    string password = 2;
    string url = 3;
    string notes = 4;
}

// Response message for setting a password.
message SetPasswordResponse {
    bool success = 1;
    string message = 2;
}

// Request message to retrieve a password.
message GetPasswordRequest {
    string username = 1;
    string url = 2;
}

// Response message for retrieving a password.
message GetPasswordResponse {
    string password = 1;
    string notes = 2;
    bool found = 3;
}

// Request message to update a password.
message UpdatePasswordRequest {
    string username = 1;
    string url = 2;
    string newPassword = 3;
    string newNotes = 4;
}

// Response message for updating a password.
message UpdatePasswordResponse {
    bool success = 1;
    string message = 2;
}

// Request message to delete a password.
message DeletePasswordRequest {
    string username = 1;
    string url = 2;
}

// Response message for deleting a password.
message DeletePasswordResponse {
    bool success = 1;
    string message = 2;
}
