// SPDX-License-Identifier: MIT
//
// Copyright (c) 2024 skjdfhkskjds
//
// Permission is hereby granted, free of charge, to any person
// obtaining a copy of this software and associated documentation
// files (the "Software"), to deal in the Software without
// restriction, including without limitation the rights to use,
// copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the
// Software is furnished to do so, subject to the following
// conditions:
//
// The above copyright notice and this permission notice shall be
// included in all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
// OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
// HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
// WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
// FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
// OTHER DEALINGS IN THE SOFTWARE.

syntax = "proto3";
package v1;

option go_package = "github.com/skjdfhkskjds/proto";

// UserService is a service for authenticating and managing user state.
service UserService {
  // Authenticate returns a token if the user is authenticated.
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);

  // CreateUser creates a new user.
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // DeleteUser deletes a user.
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

// AuthenticateRequest is a request to authenticate a user.
message AuthenticateRequest {
  string username = 1;
  string password = 2;
}

// AuthenticateResponse is a response to an AuthenticateRequest
message AuthenticateResponse {
  string token = 1;
  optional string error = 2;
}

// CreateUserRequest is a request to create a user.
message CreateUserRequest {
  string username = 1;
  string password = 2;
}

// CreateUserResponse is a response to a CreateUserRequest
message CreateUserResponse {
  string username = 1;
  optional string error = 2;
}

// DeleteUserRequest is a request to delete a user.
message DeleteUserRequest {
  string username = 1;
}

// DeleteUserResponse is a response to a DeleteUserRequest
message DeleteUserResponse {
  optional string error = 1;
}

service UserDataService {
  // GetPassword returns the user data for the given user data request.
  rpc GetUserData(GetUserDataRequest) returns (GetUserDataResponse);

  // SetPassword sets the user data for the given user data request.
  rpc SetUserData(SetUserDataRequest) returns (SetUserDataResponse);
}

message UserData {
  string username = 1;

  // Password hash is a hash of the user's password.
  // This is used to authenticate the user.
  string password_hash = 2;

  // Algorithm used to generate the password hash.
  string algorithm = 3;

  // Params stores relevant user metadata as well as
  // key values required to decode the password hash
  // for the given algorithm.
  map<string, string> params = 4;
}

// GetUserDataRequest is a request to get user data
message GetUserDataRequest {
  string username = 1;
}

// GetUserDataResponse is a response to a GetUserDataRequest
message GetUserDataResponse {
  optional UserData user_data = 1;
}

// SetUserDataRequest is a request to set user data
message SetUserDataRequest {
  UserData user_data = 1;
}

// SetUserDataResponse is a response to a SetUserDataRequest
message SetUserDataResponse {
  optional UserData user_data = 1;
}
